# openscad

./: CMakeLists.txt  README.md
examples/ModuleExpressions/: load_cell.scad  module_expression.scad  module_expression2.scad
examples/ModuleLiterals/: conditional.scad  conditional1.scad  function_function.scad  modlitexamples_member_access.scad  modlitexamples_subtract.scad
src/: Cache.h  Feature.cc  Feature.h  FontCache.cc  LibraryInfo.cc  RenderStatistic.cc  RenderStatistic.h  handle_dep.cc  openscad.cc
src/core/: AST.cc  AST.h  AbstractModule.h  AbstractNode.cc  AbstractNode.h  Arguments.cc  Arguments.h  Assignment.cc  Assignment.h  BaseVisitable.h  BuiltinContext.cc  BuiltinContext.h  BuiltinModule.cc  BuiltinModule.h  Builtins.cc  Builtins.h  CMakeLists.txt  CSGNode.cc  CSGNode.h  CSGTreeEvaluator.cc  CSGTreeEvaluator.h  CgalAdvNode.cc  CgalAdvNode.h  Children.cc  Children.h  ColorNode.cc  ColorNode.h  Context.cc  Context.h  ContextFrame.cc  ContextFrame.h  ContextFrameHandle.h  ContextHandle.h  ContextMemoryManager.cc  ContextMemoryManager.h  CsgOpNode.cc  CsgOpNode.h  DrawingCallback.cc  DrawingCallback.h  EvaluationSession.cc  (+83 more)
src/core/customizer/: Annotation.cc  Annotation.h  CommentParser.cc  CommentParser.h  ParameterObject.cc  ParameterObject.h  ParameterSet.cc  ParameterSet.h  comment_parser.y
src/core/expression/: ArrayLookup.cc  ArrayLookup.h  Assert.cc  Assert.h  BinaryOp.cc  BinaryOp.h  Echo.cc  Echo.h  FunctionCall.cc  FunctionCall.h  FunctionDefinition.cc  FunctionDefinition.h  LcEach.cc  LcEach.h  LcFor.cc  LcFor.h  LcForC.cc  LcForC.h  LcIf.cc  LcIf.h  LcLet.cc  LcLet.h  Let.cc  Let.h  ListComprehension.cc  ListComprehension.h  Literal.cc  Literal.h  Lookup.cc  Lookup.h  MemberLookup.cc  MemberLookup.h  ModuleLiteral.cc  ModuleLiteral.h  Range.cc  Range.h  TernaryOp.cc  TernaryOp.h  UnaryOp.cc  UnaryOp.h  (+5 more)
src/core/primitives/: CircleNode.cc  CircleNode.h  CubeNode.cc  CubeNode.h  CylinderNode.cc  CylinderNode.h  PolygonNode.cc  PolygonNode.h  PolyhedronNode.cc  PolyhedronNode.h  SphereNode.cc  SphereNode.h  SquareNode.cc  SquareNode.h  primitives.h
src/core/value/: EmbeddedVectorType.cc  EmbeddedVectorType.h  FunctionType.cc  FunctionType.h  ModuleReference.cc  ModuleReference.h  ObjectType.cc  ObjectType.h  RangeType.cc  RangeType.h  UndefType.cc  UndefType.h  ValuePtr.h  VectorType.cc  VectorType.h  double_converter_params.h  str_utf8_wrapper.h
src/ext/CGAL/: CGAL_workaround_Mark_bounded_volumes.h  OGL_helper.h
src/geometry/: ClipperUtils.cc  Geometry.cc  Geometry.h  GeometryCache.cc  GeometryCache.h  GeometryEvaluator.cc  GeometryEvaluator.h  GeometryUtils.cc  GeometryUtils.h  Grid.h  IndexedMesh.cc  IndexedMesh.h  PolySet.cc  PolySet.h  PolySetUtils.cc  Polygon2d.cc  Reindexer.h  linalg.cc  linalg.h  polyset-utils-old.cc  roof_ss.cc  roof_vd.cc
src/geometry/cgal/: CGALCache.cc  CGALCache.h  CGALHybridPolyhedron.cc  CGALHybridPolyhedron.h  CGAL_Nef_polyhedron.cc  CGAL_Nef_polyhedron.h  CMakeLists.txt  Polygon2d-CGAL.cc  cgal.h  cgalutils-applyops-hybrid-minkowski.cc  cgalutils-applyops-hybrid.cc  cgalutils-applyops.cc  cgalutils-closed.cc  cgalutils-convex.cc  cgalutils-coplanar-faces-remesher.h  cgalutils-hybrid.cc  cgalutils-kernel.cc  cgalutils-mesh-edits.h  cgalutils-mesh.cc  cgalutils-orient.cc  cgalutils-polyhedron.cc  cgalutils-project.cc  cgalutils-tess.cc  cgalutils-triangulate.cc  cgalutils.cc  cgalutils.h
src/glview/: Camera.cc  Camera.h  ColorMap.cc  ColorMap.h  CsgInfo.h  GLView.cc  OffscreenContextAll.hpp  OffscreenContextEGL.cc  OffscreenContextGLX.cc  OffscreenContextNULL.cc  OffscreenContextWGL.cc  OffscreenView.cc  Renderer.cc  Renderer.h  VBORenderer.cc  VBORenderer.h  VertexArray.cc  VertexArray.h  fbo.cc  fbo.h  system-gl.cc
src/glview/cgal/: CGALRenderer.cc  CGALRenderer.h  CGAL_OGL_Polyhedron.h  CGAL_OGL_VBOPolyhedron.h  CGAL_OGL_VBO_helper.h
src/glview/preview/: CSGTreeNormalizer.cc  CSGTreeNormalizer.h  OpenCSGRenderer.cc  OpenCSGRenderer.h  ThrownTogetherRenderer.cc  ThrownTogetherRenderer.h
src/gui/: Animate.cc  CGALWorker.cc  CGALWorker.h  CMakeLists.txt  Console.cc  Console.h  Editor.h  ErrorLog.cc  ErrorLog.h  EventFilter.h  LaunchingScreen.cc  MainWindow.cc  MainWindow.h  MouseSelector.cc  MouseSelector.h  Network.h  OctoPrint.cc  Preferences.cc  PrintService.cc  QGLView.cc  QGLView.h  QSettingsCached.h  ScadApi.cc  ScadLexer.cc  ScadLexer.h  ScintillaEditor.cc  ScintillaEditor.h  Settings.cc  TabManager.cc  UIUtils.cc  UIUtils.h  ViewportControl.cc  qtgettext.h
src/gui/input/: AxisConfigWidget.cc  AxisConfigWidget.h  ButtonConfigWidget.cc  ButtonConfigWidget.h  DBusInputDriver.cc  HidApiInputDriver.cc  HidApiInputDriver.h  InputDriverManager.cc  InputEventMapper.cc  JoystickInputDriver.cc
src/gui/parameter/: ParameterComboBox.cc  ParameterSlider.cc  ParameterSpinBox.cc  ParameterVector.cc  ParameterVirtualWidget.h  ParameterWidget.h
src/io/: CMakeLists.txt  DxfData.cc  DxfData.h  dxfdim.cc  export.cc  export.h  export_3mf.cc  export_amf.cc  export_dxf.cc  export_nef.cc  export_obj.cc  export_off.cc  export_param.cc  export_pdf.cc  export_png.cc  export_stl.cc  export_svg.cc  export_wrl.cc  fileutils.cc  imageutils-lodepng.cc  imageutils-macosx.cc  imageutils.cc  import.h  import_3mf.cc  import_amf.cc  import_json.cc  import_nef.cc  import_off.cc  import_stl.cc  import_svg.cc
src/io/libsvg/: libsvg.cc  libsvg.h  path.cc  shape.cc  transformation.cc
src/platform/: PlatformUtils-win.cc  PlatformUtils.cc  PlatformUtils.h
src/utils/: StackCheck.h  boost-utils.h  calc.cc  degree_trig.cc  degree_trig.h  exceptions.h  hash.cc  hash.h  printutils.cc  printutils.h  svg.cc  svg.h
tests/: CMakeLists.txt
tests/regression/dumptest-examples/: load_cell-expected.csg  modlitexamples_subtract-expected.csg  module_expression-expected.csg  module_expression2-expected.csg
