#core lib

set(CORE_LIB_SOURCES
  Filename.cc
  QuotedString.cc
  Arguments.cc
  CgalAdvNode.cc
  Children.cc
  ColorNode.cc
  Context.cc
  ContextFrame.cc
  ContextMemoryManager.cc
  control.cc
  CSGNode.cc
  CsgOpNode.cc
  CSGTreeEvaluator.cc
  EvaluationSession.cc
  Expression.cc
  expression/UnaryOp.cc
  expression/BinaryOp.cc
  expression/TernaryOp.cc
  expression/ArrayLookup.cc
  expression/Lookup.cc
  expression/Range.cc
  expression/FunctionDefinition.cc
  expression/ListComprehension.cc
  expression/FunctionCall.cc
  expression/ModuleLiteral.cc
  expression/MemberLookup.cc
  expression/Literal.cc
  expression/Vector.cc
  expression/Assert.cc
  expression/Echo.cc
  expression/Let.cc
  expression/LcLet.cc
  expression/LcIf.cc
  expression/LcEach.cc
  expression/LcFor.cc
  expression/LcForC.cc
  builtin_functions.cc
  function.cc
  ImportNode.cc
  LinearExtrudeNode.cc
  LocalScope.cc
  ScopeContext.cc
  BuiltinModule.cc
  node.cc
  NodeDumper.cc
  OffsetNode.cc
  Parameters.cc
  parsersettings.cc
  primitives.cc
  progress.cc
  ProjectionNode.cc
  RenderNode.cc
  RoofNode.cc
  DrawingCallback.cc
  RotateExtrudeNode.cc
  SurfaceNode.cc
  TextNode.cc
  TransformNode.cc
  Assignment.cc
  AST.cc
  FreetypeRenderer.cc
  GroupModule.cc
  ModuleInstantiation.cc
  NodeVisitor.cc
  SourceFile.cc
  SourceFileCache.cc
  StatCache.cc
  UserModule.cc
  Tree.cc
  ValueMap.cc
  Value.cc
  value/VectorType.cc
  value/EmbeddedVectorType.cc
  value/ModuleReference.cc
  value/RangeType.cc
  value/FunctionType.cc
  value/ObjectType.cc
  value/UndefType.cc)

add_library(openscadCORE ${CORE_LIB_SOURCES})

